# semantic-release-python-sandbox

./: .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  dummy.txt  pyproject.toml
.github/workflows/: release.yml
